--- a/data/scraper/Billboard Scraper.ipynb
+++ b/data/scraper/Billboard Scraper.ipynb
@@ -637,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = MongoClient('mongodb+srv://kylechan:Peninsula4761@playlistcluster.j1pov.mongodb.net/test')"
+    "client = MongoClient(os.environ['ATLAS_CONN'])"
    ]
   },
   {
@@ -823,9 +823,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "playlist",
+   "display_name": "practice",
    "language": "python",
-   "name": "playlist"
+   "name": "practice"
   },
   "language_info": {
    "codemirror_mode": {
